# game

./: .gitignore  CMakeLists.txt  README.md  app.c  app.h  best_store.c  best_store.h  launcher.c  sd_hw_config.c
assets/1_push_fast/: 1_push_fast_wav.h
assets/2_hit20/: introduction_wav.h
assets/3_TETRIS/: HEROICONS_LICENSE.txt  tetris_icons.h
assets/ui/: result_icons.h
bsp/: bsp_cst816.c  bsp_cst816.h  bsp_display.h  bsp_dma_channel_irq.c  bsp_dma_channel_irq.h  bsp_es8311.c  bsp_es8311.h  bsp_i2c.c  bsp_i2c.h  bsp_qmi8658.c  bsp_qmi8658.h  bsp_st77916.c  bsp_st77916.h  bsp_touch.h  pio_audio.c  pio_audio.h  pio_qspi.c  pio_qspi.h  pio_qspi.pio
games/: games.c  games.h
games/1_push_fast/: 1_push_fast.c  1_push_fast.h
games/2_hit20/: 2_hit20.c  2_hit20.h
games/3_TETRIS/: 3_TETRIS.c  3_TETRIS.h
games/4_ring8/: 4_ring8.c  4_ring8.h
games/5_ninja/: 5_ninja.c  5_ninja.h
games/6_jump/: 6_jump.c  6_jump.h
games/7_block/: 7_block.c  7_block.h
games/8_invader/: 8_invader.c  8_invader.h
games/9_pinball/: 9_pinball.c  9_pinball.h
tools/: svg_icon_to_header.py
